{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 243,
  "lineage": "ff8afd98-5a46-b641-191a-9fcee72570ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cc16f7f08c4457",
            "arn": "arn:aws:ec2:eu-west-1:459415333758:instance/i-0a9b3b20cc23306af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a9b3b20cc23306af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-008b4c1735efb0384",
            "private_dns": "ip-10-10-2-12.eu-west-1.compute.internal",
            "private_ip": "10.10.2.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bda40d2c5167d745",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-014b51efd459e8795",
            "tags": {
              "Name": "Websever"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00280b92347a96c97"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgWeb",
            "aws_subnet.private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089cc16f7f08c4457",
            "arn": "arn:aws:ec2:eu-west-1:459415333758:instance/i-0f1d4b67797f47859",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1d4b67797f47859",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b70f573f6979265c",
            "private_dns": "ip-10-10-1-249.eu-west-1.compute.internal",
            "private_ip": "10.10.1.249",
            "public_dns": "ec2-54-247-36-79.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.247.36.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02c692d533fbbdaef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-068f100aeca3d8083",
            "tags": {
              "Name": "NginxRP"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090ced7a052d84362"
            ]
          },
          "dependencies": [
            "aws_key_pair.default",
            "aws_security_group.sgNginx",
            "aws_subnet.public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:internet-gateway/igw-01bc62f1810cea5d3",
            "id": "igw-01bc62f1810cea5d3",
            "owner_id": "459415333758",
            "tags": {
              "Name": "VPC IGW"
            },
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d73a6bf85bc71ff7",
            "owner_id": "459415333758",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PrivateRT"
            },
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0111fb8ef63709cb7",
            "owner_id": "459415333758",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bc62f1810cea5d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT"
            },
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01011fa20227b87e9",
            "route_table_id": "rtb-0d73a6bf85bc71ff7",
            "subnet_id": "subnet-014b51efd459e8795"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.private-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b217e705787803b8",
            "route_table_id": "rtb-0111fb8ef63709cb7",
            "subnet_id": "subnet-068f100aeca3d8083"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgNginx",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:security-group/sg-090ced7a052d84362",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090ced7a052d84362",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sgnginx",
            "name_prefix": null,
            "owner_id": "459415333758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgWeb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:security-group/sg-00280b92347a96c97",
            "description": "Allow traffic from public subnet",
            "egress": [],
            "id": "sg-00280b92347a96c97",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgweb",
            "name_prefix": null,
            "owner_id": "459415333758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:subnet/subnet-014b51efd459e8795",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-014b51efd459e8795",
            "map_public_ip_on_launch": false,
            "owner_id": "459415333758",
            "tags": {
              "Name": "Web Private Subnet"
            },
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:subnet/subnet-068f100aeca3d8083",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-068f100aeca3d8083",
            "map_public_ip_on_launch": false,
            "owner_id": "459415333758",
            "tags": {
              "Name": "Nginx Public Subnet"
            },
            "vpc_id": "vpc-00990daa4808b15f8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:459415333758:vpc/vpc-00990daa4808b15f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e321010d2dcdd8b4",
            "default_route_table_id": "rtb-0841fc2dd6139f0d9",
            "default_security_group_id": "sg-0281d2e733c08a417",
            "dhcp_options_id": "dopt-4f138529",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00990daa4808b15f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0841fc2dd6139f0d9",
            "owner_id": "459415333758",
            "tags": {
              "Name": "APP_VCP"
            }
          }
        }
      ]
    }
  ]
}